also its parent has float now. Removed jump_to's button's extra margin... This requires some testing on different browsers/OSes. While it looks very small change it might effect button's position on different browsers, if so we need to go for an alternative approach to fix the issue.

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -3083,7 +3083,6 @@ span.postby {
 }
 /* This is a bit of a kludge too */
 #message_index_jump_to .button_submit {
-	margin-top: 3px;
 	padding: 1px 6px;
 }
 
